<resources>
    <string name="app_name">Apple</string>
    <string name="dashboard_string_module_0">Module 0</string>
    <string name="dashboard_string_description_module_0">What is pinyin?</string>
    <string name="dashboard_string_percent_complete">0% Complete</string>
    <string name="main_string_tutor">Tutor</string>
    <string name="main_string_i">i</string>
    <string name="main_string_owl">owl</string>
    <string name="main_string_get_started">Get Started</string>
    <string name="main_string_Welcome">Welcome!</string>
    <string name="main_string_welcome_message">Tutoriowl will help you to master Mandarin\npronunciation with interactive lessons and\npractice exercises.</string>
    <string name="login_string_log">Log</string>
    <string name="login_string_in">in</string>
    <string name="login_string_description">Logging in to your account</string>
    <string name="login_string_hint_username">Username</string>
    <string name="login_string_hint_password">Password</string>
    <string name="login_string_enter">Enter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dashboard_string_greet">Goodmorning \nKhalid!</string>
    <string name="bottom_navigation_string_dashboard">Dashboard</string>
    <string name="bottom_navigation_string_performance">Performance</string>
    <string name="bottom_navigation_string_leaderboard">Leaderboard</string>
    <string name="bottom_navigation_string_practice">Practice</string>
    <string name="bottom_navigation_string_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_practice_string_initials">Initials</string>
    <string name="fragment_practice_string_practice">Practice</string>
    <string name="fragment_practice_string_pinyin_characters">Pinyin\nCharacters</string>
    <string name="fragment_practice_string_pinyin_characters_description">breaks down Chinese\ncharacters into their\nparts</string>
    <string name="fragment_practice_string_pronunciation_practice">"Let's practice your\npronunciation"</string>
    <string name="fragment_practice_string_pronunciation_practice_description">Practice your pronunciation\nhere.</string>
    <string name="fragment_initial_string_b">b</string>
    <string name="fragment_initial_string_p">p</string>
    <string name="fragment_initial_string_m">m</string>
    <string name="fragment_initial_string_f">f</string>
    <string name="fragment_initial_string_d">d</string>
    <string name="fragment_initial_string_i">i</string>
    <string name="fragment_initial_string_g">g</string>
    <string name="fragment_initial_string_k">k</string>
    <string name="fragment_initial_string_h">h</string>
    <string name="fragment_initial_string_j">j</string>
    <string name="fragment_initial_string_q">q</string>
    <string name="fragment_initial_string_x">x</string>
    <string name="fragment_initial_string_zh">zh</string>
    <string name="fragment_initial_string_ch">ch</string>
    <string name="fragment_initial_string_sh">sh</string>
    <string name="fragment_initial_string_r">r</string>
    <string name="fragment_initial_string_z">z</string>
    <string name="fragment_initial_string_c">c</string>
    <string name="fragment_initial_string_s">s</string>
    <string name="fragment_initial_string_y">y</string>
    <string name="fragment_initial_string_t">t</string>
    <string name="fragment_simple_string_a">a</string>
    <string name="fragment_simple_string_e">e</string>
    <string name="fragment_simple_string_i">i</string>
    <string name="fragment_simple_string_o">o</string>
    <string name="fragment_simple_string_u">u</string>
    <string name="fragment_simple_string_ü">ü</string>
    <string name="fragment_compound_string_ai">ai</string>
    <string name="fragment_compound_string_ei">ei</string>
    <string name="fragment_compound_string_ou">ou</string>
    <string name="fragment_compound_string_an">an</string>
    <string name="fragment_compound_string_en">en</string>
    <string name="fragment_compound_string_in">in</string>
    <string name="fragment_compound_string_un">un</string>
    <string name="fragment_compound_string_ün">ün</string>
    <string name="fragment_compound_string_iang">iang</string>
    <string name="fragment_compound_string_eng">eng</string>
    <string name="fragment_compound_string_swipe">&#60;&#32;&#32;&#32;&#32;swipe&#32;&#32;&#32;&#32;&#62;</string>
    <string name="fragment_compound_string_compound_finals">Compound Finals</string>
    <string name="fragment_initials_string_initials">Initials</string>
    <string name="fragment_simple_string_simple_finals">Simple Finals</string>
    <string name="characters_dialog_box_string_question">What do you want to know about this character?</string>
    <string name="characters_dialog_box_string_pronunciation_how">I want to know its pronunciation</string>
    <string name="characters_dialog_box_string_details">I want to know its details</string>
    <string name="characters_dialog_box_string_cancel">Cancel</string>
    <string name="characters_dialog_description_string">The \'ian\' final sounds somewhat like the English word "yen". To pronounce it, start with the \'i\' sound as in "see", add a nasal quality as in "singer", and end with the \'an\' sound as in "can".</string>
    <string name="characters_dialog_description_string_exit">Click outside to exit</string>
    <string name="dashboard_string_module_1">Module 1</string>
    <string name="dashboard_string_description_module_1">Initials</string>
    <string name="dashboard_string_module_2">Module 2</string>
    <string name="dashboard_string_description_module_2">Finals</string>
    <string name="dashboard_string_module_3">Module 3</string>
    <string name="dashboard_string_description_module_3">Tones</string>
    <string name="dashboard_string_dashboard_button">Dashboard</string>
    <string name="dashboard_string_performance_button">Performance</string>
    <string name="dashboard_string_practice_button">Practice</string>
    <string name="module0_string_subheader">Subtopics</string>
    <string name="module0_string_header">Module 0</string>
    <string name="module0_string_subtopic">Introduction</string>
    <string name="module0_string_subtopic1_description">What is Chinese?</string>
    <string name="module0_string_subtopic2_description">What is Pinyin?</string>
    <string name="module0_string_subtopic3_description">Components of Pinyin</string>
    <string name="module0_subtopic1_string_header">What is Chinese?</string>
    <string name="module0_subtopic1_page1_content">Chinese is a family of related languages or
                        dialects that originated in China. There are hundreds, and some argue, thousands, of
                        different dialects of Chinese. The most important one you should know is <strong><b>Mandarin</b></strong>.</string>
    <string name="module0_subtopic1_page2_content">Mandarin, with about 900,000,000 speakers, is the official language of China,
                        Taiwan, an official language of Singapore, and one of six official languages of the united Nations. When people refer to the
                        “Chinese” language, they are usually referring to Mandarin.</string>
    <string name="module0_subtopic1_page3_content">Mandarin is</string>
    <string name="module0_subtopic1_page3.1_content">• the official/main language of China and Taiwan</string>
    <string name="module0_subtopic1_page3.2_content">• one of the four official languages of Singapore</string>
    <string name="module0_subtopic1_page3.3_content">• spoken in Malaysia, Indonesia, Vietnam, Hong Kong, South
                        Africa, Macau, Cambodia, Thailand, Philippines, UK, USA, and Brunei, among others</string>
    <string name="module0_subtopic2_string_header">What is Pinyin?</string>
    <string name="module0_subtopic2_page1_content">Pinyin is a romanization system. A romanization system allows us to change
                    writing from a script, such as Chinese or Russian, into the Latin (Roman) script which uses the ABC alphabet that you already know.</string>
    <string name="module0_subtopic2_page2_content">Chinese has several romanization systems, but in this course we are going to
                    stick to just one - Pinyin! We use Pinyin to convert characters into words we can read and pronounce more easily.</string>
    <string name="module0_subtopic2_page3_content">Pinyin is a phonetic system and is formally called Hanyu Pinyin. Hanyu
                    means the language of the Han people - China’s largest ethnic group.</string>
    <string name="module0_subtopic3_string_header">Components of Pinyin</string>
    <string name="module0_subtopic3_page1_content">A Pinyin syllable consists of 3 components -
                    Initials, Finals, and Tones.</string>
    <string name="module0_subtopic3_page2_content">Initials: Represent consonant sounds in Pinyin.</string>
    <string name="module0_subtopic3_page3_content">Finals: Represent vowel sounds in Pinyin.</string>
    <string name="module0_subtopic3_page4_content">Tones : There are four tones in total.</string>
    <string name="module0_subtopic3_page4.2_content">Remember : Tones are always placed on top of the initials!</string>
    <string name="module1_string_subheader">Subtopics</string>
    <string name="module1_string_header">Module 1</string>
    <string name="module1_string_subtopic">Initials</string>
    <string name="module1_string_subtopic1_description">Aspiration</string>
    <string name="module1_string_subtopic2_description">First Set of Initials</string>
    <string name="module1_string_subtopic3_description">Second Set of Initials</string>
    <string name="module1_subtopic1_string_header">Aspiration</string>
    <string name="module1_subtopic1_page1_content">In a Pinyin syllable, an initial is
                    the consonant. Initials are always before the final, hence its name. There are 21 Pinyin
                    initials in total.</string>
    <string name="module1_subtopic1_page2_content">By definition, aspiration is a strong puff of air.
                    There are 6 aspirated initials in Mandarin.</string>
    <string name="module1_subtopic1_page3_content">Click on the buttons to hear how the following initials
                    are pronounced. Can you hear a difference?</string>
    <string name="module1_subtopic2_string_header">First Set of Initials</string>
    <string name="module1_subtopic2_page1_content">Click the buttons to hear how each initial is pronounced</string>
    <string name="module1_subtopic2_page2_content">Pronounced similar to how /b/ in the English word “bath” is pronounced</string>
    <string name="module1_subtopic2_page2.2_content">Pronounced similar to how /p/ in the English word “puff” is pronounced</string>
    <string name="module1_subtopic2_page3_content">Pronounced similar to how /m/ in the English word “man” is pronounced</string>
    <string name="module1_subtopic2_page3.2_content">Pronounced similar to how /f/ in the English word “fun” is pronounced</string>
    <string name="module1_subtopic2_page4_content">Pronounced similar to how /d/ in the English word “dig” is pronounced</string>
    <string name="module1_subtopic2_page4.2_content">Pronounced similar to how /t/ in the English word “take” is pronounced</string>
    <string name="module1_subtopic2_page5_content">Pronounced similar to how /n/ in the English word “nasty” is pronounced</string>
    <string name="module1_subtopic2_page5.2_content">Pronounced similar to how /l/ in the English word “large” is pronounced</string>
    <string name="module1_subtopic2_page6_content">Pronounced similar to how /g/ in the English word “gun” is pronounced</string>
</resources>