<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_navigation_dashboard"
        android:title="@string/bottom_navigation_string_dashboard"
        android:icon="@drawable/custom_dashboard_icon"/>
    <item
        android:id="@+id/bottom_navigation_performance"
        android:title="@string/bottom_navigation_string_performance"
        android:icon="@drawable/custom_performance_icon"/>
    <item
        android:id="@+id/bottom_navigation_leader_board"
        android:title="@string/bottom_navigation_string_leaderboard"
        android:icon="@drawable/custom_leaderboard_icon"/>
    <item
        android:id="@+id/bottom_navigation_practice"
        android:title="@string/bottom_navigation_string_practice"
        android:icon="@drawable/custom_practice_icon"/>
    <item
        android:id="@+id/bottom_navigation_settings"
        android:title="@string/bottom_navigation_string_settings"
        android:icon="@drawable/custom_settings_icon"/>
</menu>