<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"

    android:background="@color/ghost_white">

    <ImageButton
        android:id="@+id/login_image_button_back"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/back_button"
        android:background="@null"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginStart="25dp"
        android:layout_marginTop="75dp">
    </ImageButton>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_string_layout_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginStart="50dp"
        android:layout_marginTop="125dp">

        <TextView
            android:id="@+id/login_string_view_log"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/login_string_log"
            style="@style/login_string_style_log"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>
        <TextView
            android:id="@+id/login_string_view_in"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/login_string_in"
            style="@style/login_string_style_in"

            app:layout_constraintStart_toEndOf="@id/login_string_view_log"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login_image_view_log_in"

            android:layout_marginStart="5dp"/>
        <ImageView
            android:id="@+id/login_image_view_log_in"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/login_icon"

            app:layout_constraintStart_toEndOf="@+id/login_string_view_in"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp">
        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/login_view_horizontal_line"

        android:layout_width="165dp"
        android:layout_height="2dp"

        android:background="@color/black"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_string_layout_log_in"

        android:layout_marginStart="50dp"/>

    <TextView
        android:id="@+id/login_string_view_description"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/login_string_description"
        style="@style/login_string_style_description"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_view_horizontal_line"

        android:layout_marginStart="50dp">
    </TextView>

    <EditText
        android:id="@+id/login_edit_text_email"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"

        android:hint="@string/login_string_hint_username"

        android:inputType="text"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"

        android:textCursorDrawable="@null"

        android:background="@drawable/edit_text_background_one"

        android:drawableStart="@drawable/custom_user_icon"
        android:drawablePadding="6dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_string_view_description"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="100dp"

        android:padding="15dp">
    </EditText>
    <EditText
        android:id="@+id/login_edit_text_password"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"

        android:hint="@string/login_string_hint_password"

        android:inputType="textPassword"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"

        android:textCursorDrawable="@null"

        android:background="@drawable/edit_text_background_one"

        android:drawableStart="@drawable/custom_padlock_icon"
        android:drawablePadding="6dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_edit_text_email"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="50dp"

        android:padding="15dp">
    </EditText>
    <androidx.cardview.widget.CardView
        android:id="@+id/login_card_view_enter"

        android:layout_width="wrap_content"
        android:layout_height="55dp"

        app:cardBackgroundColor="@color/lavender_indigo"
        app:cardCornerRadius="20dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginBottom="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/login_string_enter"
            style="@style/login_string_style_enter"
            android:background="@drawable/acknowledge_button_background"/>
    </androidx.cardview.widget.CardView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/eigengrau"

        android:layout_marginTop="650dp">
    </ImageView>

    <ProgressBar
        android:id="@+id/login_progressBar"

        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_card_view_enter"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>